--- a/roles/django/templates/secrets.j2
+++ b/roles/django/templates/secrets.j2
@@ -8,4 +8,4 @@ SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET = '{{ django_google_oauth_secret }}'
 
 # GitHub - see https://github.com/settings/applications/new
 SOCIAL_AUTH_GITHUB_KEY = '{{ django_github_key }}'
-SOCIAL_AUTH_GITHUB_SECRET = '{{ django_github_key }}'
+SOCIAL_AUTH_GITHUB_SECRET = '{{ django_github_secret }}'
