Allow access via IP address

--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -9,6 +9,7 @@ from .base import *  # noqa
 # What hostname we're allowed to serve
 ALLOWED_HOSTS = (
     '{{ webserver_fqdn }}',
+    '{{ webserver_ipv4 }}',
 )
 
 # Database settings
