--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -12,6 +12,9 @@ ALLOWED_HOSTS = (
     '{{ webserver_ipv4 }}',
 )
 
+# Root URL for the site, e.g. for generating emails with no request object
+BASE_URL = 'https://{{ webserver_fqdn }}/'
+
 # Database settings
 DATABASES['default'] = {
     'ENGINE': 'django.db.backends.postgresql_psycopg2',
@@ -30,6 +33,16 @@ MEDIA_ROOT = '{{ django_media_path }}'
 
 # Where to store model & protocol repositories
 REPO_BASE = '{{ django_entity_repos_path }}'
+
+# Where to store experiment results
+EXPERIMENT_BASE = '{{ django_experiments_path }}'
+
+# For contacting the experiment runner backend
+CHASTE_URL = 'http://{{ fc_webservice_fqdn }}/fc_runner.py'
+CHASTE_PASSWORD = secrets.CHASTE_PASSWORD
+
+# How the backend should contact us
+CALLBACK_HOST = BASE_URL
 
 # Use forwarded headers for anything that requires a hostname.
 USE_X_FORWARDED_HOST = True
