--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -42,7 +42,7 @@ CHASTE_URL = 'http://{{ fc_webservice_fqdn }}/fc_runner.py'
 CHASTE_PASSWORD = secrets.CHASTE_PASSWORD
 
 # How the backend should contact us
-CALLBACK_HOST = BASE_URL
+CALLBACK_BASE_URL = BASE_URL
 
 # Use forwarded headers for anything that requires a hostname.
 USE_X_FORWARDED_HOST = True
