Add rollbar config

--- a/roles/django/templates/secrets.j2
+++ b/roles/django/templates/secrets.j2
@@ -12,3 +12,6 @@ SOCIAL_AUTH_GITHUB_SECRET = '{{ django_github_secret }}'
 
 # Experiment runner backend
 CHASTE_PASSWORD = '{{ celery_password }}'
+
+# Rollbar access token
+ROLLBAR_POST_SERVER_ITEM_ACCESS_TOKEN = '{{ rollbar_post_server_item_access_token }}'
