--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -108,6 +108,14 @@ LOGGING['loggers'] = {
     for app in LOCAL_APPS
 }
 
+# Rollbar server reporting
+ROLLBAR = {
+    'access_token': secrets.ROLLBAR_POST_SERVER_ITEM_ACCESS_TOKEN,
+    'environment': 'development' if DEBUG else 'production',
+    'branch': 'master',
+    'root': BASE_DIR,
+}
+
 # Send error emails here
 ADMINS = (
 {% for name_email in django_admin_emails %}
