Restructure & tidy variable handling
- Created groups for production, staging, deployed, dev. Moved secrets
  into these groups.
- Made more use of role dependencies, noting that these let roles
  share default vars. In particular, celery now depends on fc-backend.
- Added an add_user role for creating django & celery users.

--- a/roles/celery/templates/celery.service.j2
+++ b/roles/celery/templates/celery.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 User={{ celery_user }}
-Group={{ celery_group }}
+Group={{ user_meta[celery_user].group }}
 EnvironmentFile=-/etc/default/{{ celery_service_name }}
 
 WorkingDirectory={{ celery_checkout }}
