The webservice password got renamed

--- a/roles/django/templates/secrets.j2
+++ b/roles/django/templates/secrets.j2
@@ -11,7 +11,7 @@ SOCIAL_AUTH_GITHUB_KEY = '{{ django_github_key }}'
 SOCIAL_AUTH_GITHUB_SECRET = '{{ django_github_secret }}'
 
 # Experiment runner backend
-CHASTE_PASSWORD = '{{ celery_password }}'
+CHASTE_PASSWORD = '{{ fc_webservice_password }}'
 
 # Rollbar access token
 ROLLBAR_POST_SERVER_ITEM_ACCESS_TOKEN = '{{ rollbar_post_server_item_access_token }}'
