--- a/roles/celery/templates/config.json.j2
+++ b/roles/celery/templates/config.json.j2
@@ -1,5 +1,5 @@
 {
-    "password": "{{ celery_password }}",
+    "password": "{{ fc_webservice_password }}",
     "chaste_root": "{{ chaste_root }}",
     "exe_path": "{{ chaste_fc_exe }}",
     "syntax_check_path": "{{ chaste_syntax_exe }}",
