--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -38,7 +38,7 @@ REPO_BASE = '{{ django_entity_repos_path }}'
 EXPERIMENT_BASE = '{{ django_experiments_path }}'
 
 # For contacting the experiment runner backend
-CHASTE_URL = 'http://{{ fc_webservice_fqdn }}/fc_runner.py'
+CHASTE_URL = 'http://{{ fc_webservice_fqdn }}:{{ fc_webservice_port }}/fc_runner.py'
 CHASTE_PASSWORD = secrets.CHASTE_PASSWORD
 
 # How the backend should contact us
