--- a/roles/django/templates/deployed.j2
+++ b/roles/django/templates/deployed.j2
@@ -113,7 +113,7 @@ ROLLBAR = {
     'access_token': secrets.ROLLBAR_POST_SERVER_ITEM_ACCESS_TOKEN,
     'environment': 'development' if DEBUG else 'production',
     'branch': 'master',
-    'root': BASE_DIR,
+    'root': str(BASE_DIR),
 }
 
 # Send error emails here
