Attempting to download fitting prototype code and install Pints

--- a/roles/celery/templates/config.json.j2
+++ b/roles/celery/templates/config.json.j2
@@ -2,6 +2,7 @@
     "password": "{{ fc_webservice_password }}",
     "chaste_root": "{{ chaste_root }}",
     "exe_path": "{{ chaste_fc_exe }}",
+    "fitting_path": "{{ fitting_exe }}",
     "syntax_check_path": "{{ chaste_syntax_exe }}",
     "temp_dir": "/tmp/",
     "temp_file_prefix": "fc_tmp_",
